Create SocialNetwork.js and configure Firebase

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Social Network</title>
+    <title>Semcomp Social</title>
     <meta charset="utf-8">
     <link href="assets/images/favicon.png" rel="icon">
     <link rel="icon" sizes="192x192" href="assets/images/favicon.png">
@@ -13,7 +13,7 @@
 
 
     <!-- Chrome mobile theme color -->
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#01579b">
     <!-- Add to homescreen -->
     <meta name="mobile-web-app-capable" content="yes">
     <!-- More info: https://developer.chrome.com/multidevice/android/installtohomescreen -->
