--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Semcomp Social</title>
     <meta charset="utf-8">
-    <link href="assets/images/favicon.png" rel="icon">
-    <link rel="icon" sizes="192x192" href="assets/images/favicon.png">
+    <link href="assets/images/logo-semcomp.png" rel="icon">
+    <link rel="icon" sizes="192x192" href="assets/images/logo-semcomp.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 
     <link type="text/css" rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css"  media="screen,projection"/>
@@ -18,7 +18,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <!-- More info: https://developer.chrome.com/multidevice/android/installtohomescreen -->
   </head>
-  <body>
+  <body class="blue-grey lighten-5">
     <div id="react-body"></div>
     <script src="script.js"></script>
   </body>
